# HashMap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  test.txt
List/: CMakeLists.txt
List/include/: list.h  list_config.h  list_err_gen.h  list_err_types.h  list_error_gen.h  list_error_types.h
List/src/: list.cpp  list_dump.cpp
gnuplot/: ASCII_Sum.csv  ASCII_Sum.gpi  ASCII_SumHash.csv  ASCII_SumHash.gpi  Constant.csv  Constant.gpi  ConstantHash.csv  ConstantHash.gpi  Crc32Hash.csv  Crc32Hash.gpi  FNVA1a.csv  FNVA1a.gpi  FNVA1aHash.csv  FNVA1aHash.gpi  FirstChar.csv  FirstChar.gpi  FirstCharHash.csv  FirstCharHash.gpi  FirstCharHashScaled.gpi  FirstCharScaled.gpi  Polynomial.csv  Polynomial.gpi  PolynomialHash.csv  PolynomialHash.gpi  RolHash.csv  RolHash.gpi  dispersions.csv  graph.gpi  polynomial.csv  strlen.csv  strlen.gpi  strlenHash.csv  strlenHash.gpi  strlenHashScaled.gpi  strlen_scaled.gpi
include/: common_header.h  dic_parser.h  hash_funcs.h  hash_functions.h  hash_map.h  hash_map_err_gen.h  hash_map_err_types.h  hash_structures.h  hash_table.h  hash_table_error_gen.h  hash_table_error_types.h  hash_table_structures.h  test_hash_funcs.h  test_hash_functions.h  test_hash_map.h  test_hash_table.h
src/: dic_parser.cpp  hash_funcs.cpp  hash_functions.cpp  hash_map.cpp  hash_table.cpp  main.cpp  test_hash_funcs.cpp  test_hash_functions.cpp  test_hash_map.cpp  test_hash_table.cpp  test_list.cpp  test_parser.cpp  test_speed.cpp
times/: crc32_align.txt  no_opts.txt
